[gd_scene load_steps=11 format=3 uid="uid://cdyghw15niw36"]

[ext_resource type="Script" path="res://Levels/basic_dungeon.gd" id="1_65xyv"]
[ext_resource type="TileSet" uid="uid://bns40f1vo75ri" path="res://Tiles/Tile_set_all.tres" id="2_riet7"]
[ext_resource type="PackedScene" uid="uid://bqvd8oornsh3j" path="res://Player/HP_bar.tscn" id="3_hw6d3"]
[ext_resource type="Script" path="res://Levels/Weapon_Button.gd" id="4_l2nhg"]
[ext_resource type="PackedScene" uid="uid://bd62bito1jy2a" path="res://Player/Player.tscn" id="5_4vr7m"]
[ext_resource type="PackedScene" uid="uid://n7b30cpxy2x4" path="res://Weapons/Sword.tscn" id="6_7s8fc"]
[ext_resource type="PackedScene" uid="uid://cglkt5fttl6id" path="res://Enemies/Red_monster.tscn" id="7_461yd"]
[ext_resource type="PackedScene" uid="uid://ceym54db6hvkw" path="res://Weapons/Axe.tscn" id="8_oxcd8"]
[ext_resource type="PackedScene" uid="uid://h77d8jjupy3t" path="res://Items/Regen.tscn" id="9_jw3th"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4v8o"]
bg_color = Color(0.509804, 0.419608, 0.301961, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0.337255, 0.254902, 0.239216, 0.6)
shadow_size = 27

[node name="BasicDungeon" type="Node2D"]
script = ExtResource("1_65xyv")

[node name="Level" type="TileMap" parent="."]
tile_set = ExtResource("2_riet7")
cell_quadrant_size = 32
collision_animatable = true
format = 2
layer_0/tile_data = PackedInt32Array(-851971, 786432, 4, -851969, 786432, 4, -917503, 786432, 4, -720895, 786432, 4, -655361, 786432, 4, -655363, 786432, 4, 3473389, 786432, 4, 3538925, 786432, 4, 3473390, 786432, 4, 3538926, 786432, 4, 3145711, 2359296, 6, 3211247, 2359296, 6, 3276783, 2359296, 6, 3342319, 2359296, 6, 3407855, 2359296, 6, 3473391, 786432, 4, 3538927, 786432, 4, 3604463, 2359296, 6, 3669999, 2359296, 6, 3735535, 2359296, 6, 3801071, 2359296, 6, 3145712, 2359296, 6, 3211248, 2359296, 6, 3276784, 2359296, 6, 3342320, 2359296, 6, 3407856, 2359296, 6, 3473392, 786432, 4, 3538928, 786432, 4, 3604464, 2359296, 6, 3670000, 2359296, 6, 3735536, 2359296, 6, 3801072, 2359296, 6, 3145713, 2359296, 6, 3211249, 2359296, 6, 3276785, 2359296, 6, 3342321, 786432, 4, 3407857, 786432, 4, 3473393, 786432, 4, 3538929, 786432, 4, 3604465, 786432, 4, 3670001, 786432, 4, 3735537, 2359296, 6, 3801073, 2359296, 6, 3145714, 2359296, 6, 3211250, 2359296, 6, 3276786, 2359296, 6, 3342322, 786432, 4, 3407858, 786432, 4, 3473394, 786432, 4, 3538930, 786432, 4, 3604466, 786432, 4, 3670002, 786432, 4, 3735538, 2359296, 6, 3801074, 2359296, 6, 3145715, 2359296, 6, 3211251, 2359296, 6, 3276787, 2359296, 6, 3342323, 786432, 4, 3407859, 786432, 4, 3473395, 786432, 4, 3538931, 786432, 4, 3604467, 786432, 4, 3670003, 786432, 4, 3735539, 786432, 4, 3801075, 786432, 4, 3145716, 2359296, 6, 3211252, 2359296, 6, 3276788, 2359296, 6, 3342324, 786432, 4, 3407860, 786432, 4, 3473396, 786432, 4, 3538932, 786432, 4, 3604468, 786432, 4, 3670004, 786432, 4, 3735540, 786432, 4, 3801076, 786432, 4, 3145717, 2359296, 6, 3211253, 2359296, 6, 3276789, 2359296, 6, 3342325, 786432, 4, 3407861, 786432, 4, 3473397, 786432, 4, 3538933, 786432, 4, 3604469, 786432, 4, 3670005, 786432, 4, 3735541, 2359296, 6, 3801077, 2359296, 6, 3145718, 2359296, 6, 3211254, 2359296, 6, 3276790, 2359296, 6, 3342326, 786432, 4, 3407862, 786432, 4, 3473398, 786432, 4, 3538934, 786432, 4, 3735542, 2359296, 6, 3801078, 2359296, 6, 3145719, 786432, 4, 3211255, 786432, 4, 3276791, 786432, 4, 3342327, 786432, 4, 3407863, 786432, 4, 3473399, 786432, 4, 3538935, 786432, 4, 3735543, 2359296, 6, 3801079, 2359296, 6, 3145720, 786432, 4, 3211256, 786432, 4, 3276792, 786432, 4, 3342328, 786432, 4, 3407864, 786432, 4, 3473400, 786432, 4, 3538936, 786432, 4, 3735544, 2359296, 6, 3801080, 2359296, 6, 3145721, 2359296, 6, 3211257, 2359296, 6, 3276793, 2359296, 6, 3342329, 786432, 4, 3407865, 786432, 4, 3473401, 786432, 4, 3538937, 786432, 4, 3604473, 786432, 4, 3670009, 786432, 4, 3735545, 2359296, 6, 3801081, 2359296, 6, 3145722, 2359296, 6, 3211258, 2359296, 6, 3276794, 2359296, 6, 3342330, 2359296, 6, 3407866, 2359296, 6, 3473402, 786432, 4, 3538938, 786432, 4, 3604474, 2359296, 6, 3670010, 2359296, 6, 3735546, 2359296, 6, 3801082, 2359296, 6, 3145723, 2359296, 6, 3211259, 2359296, 6, 3276795, 2359296, 6, 3342331, 2359296, 6, 3407867, 2359296, 6, 3473403, 786432, 4, 3538939, 786432, 4, 3604475, 2359296, 6, 3670011, 2359296, 6, 3735547, 2359296, 6, 3801083, 2359296, 6, 3145724, 2359296, 6, 3211260, 2359296, 6, 3276796, 2359296, 6, 3342332, 2359296, 6, 3407868, 2359296, 6, 3473404, 786432, 4, 3538940, 786432, 4, 3604476, 2359296, 6, 3670012, 2359296, 6, 3735548, 2359296, 6, 3801084, 2359296, 6, 3473405, 786432, 4, 3538941, 786432, 4, 3473406, 786432, 4, 3538942, 786432, 4, 3604470, 786432, 4, 3604471, 786432, 4, 3670007, 786432, 4, 3670008, 786432, 4, 3604472, 786432, 4, 3670006, 786432, 4, 0, 786432, 4, 1, 786432, 4, 2, 786432, 4, 3, 786432, 4, 4, 786432, 4, 5, 786432, 4, 6, 786432, 4, 7, 786432, 4, 8, 786432, 4, 9, 786432, 4, 10, 786432, 4, 11, 786432, 4, 100, 786432, 4, -65536, 786432, 4, -655333, 786432, 4, -65529, 786432, 4, -131061, 786432, 4, -65521, 786432, 4)
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-851974, 3670016, 4, -786438, 3670016, 6, -786435, 3014656, 6, -720899, 1966080, 4, -655363, 3276800, 4, -983041, 3014656, 4, -917505, 2883584, 6, -851969, 3276800, 4, -851967, 3276800, 6, -786431, 1966080, 4, -720895, 3276800, 4, -786422, 3670016, 4, -720892, 3407872, 4, -655356, 3538944, 6, -917499, 2228224, 6, -655357, 2621440, 4, -786429, 2621440, 4, -917497, 3538944, 6, -917498, 2752512, 6, -1048571, 2228224, 6, -1048570, 2752512, 6, -983034, 3473408, 327684, -1114107, 3407872, 4, -786421, 3670016, 4, -851964, 3473408, 4, -786428, 3538944, 6, -851958, 3473408, 4, -786426, 3670016, 4, -786425, 3670016, 4, -786424, 3670016, 4, -786420, 3670016, 4, -786419, 3670016, 4, -720890, 3670016, 6, -720889, 3670016, 6, -720888, 3670016, 6, -720887, 3670016, 6, -720886, 3670016, 6, -720885, 3670016, 6, -720884, 3670016, 6, -720883, 3670016, 131078, -655355, 3538944, 131078, -655346, 3538944, 196614, -720880, 3538944, 196614, -786418, 3670016, 4, -786417, 3670016, 4, -983033, 3473408, 4, -917496, 3145728, 6, -983032, 3473408, 327684, 3407856, 3014656, 6, 3473392, 1966080, 4, 3538928, 1966080, 4, 3407866, 3014656, 6, 3473402, 1966080, 4, 3538938, 1966080, 4, 3604474, 3276800, 4, 3604464, 3276800, 4, 3670003, 3014656, 6, 3735539, 1966080, 4, 3801075, 3276800, 4, 3670004, 3014656, 6, 3735540, 1966080, 4, 3801076, 3276800, 4, 3211255, 3014656, 6, 3276791, 1966080, 4, 3342327, 3276800, 4, 3211256, 3014656, 6, 3276792, 1966080, 4, 3342328, 3276800, 4)

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
visible = false
top_level = true
custom_minimum_size = Vector2(200, 200)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -235.0
offset_top = 28.0
offset_right = -35.0
offset_bottom = 228.0
grow_horizontal = 0
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
handle_input_locally = false
gui_disable_input = true
gui_embed_subwindows = true
sdf_oversize = 0
sdf_scale = 0
size = Vector2i(200, 200)
render_target_update_mode = 0

[node name="HP_bar" parent="CanvasLayer" instance=ExtResource("3_hw6d3")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 534.0
offset_bottom = 31.0
grow_horizontal = 1
grow_vertical = 1

[node name="Weapon_stock" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -164.0
grow_horizontal = 0
grow_vertical = 0

[node name="Panel" type="Panel" parent="CanvasLayer/Weapon_stock"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e4v8o")

[node name="Weapon_list" type="ScrollContainer" parent="CanvasLayer/Weapon_stock"]
layout_mode = 2

[node name="Container" type="VBoxContainer" parent="CanvasLayer/Weapon_stock/Weapon_list"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="CanvasLayer/Weapon_stock/Weapon_list/Container"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_direction = 1
layout_mode = 2
icon_alignment = 1
script = ExtResource("4_l2nhg")

[node name="Player" parent="." instance=ExtResource("5_4vr7m")]
position = Vector2(26, -195)

[node name="Sword" parent="." instance=ExtResource("6_7s8fc")]
position = Vector2(25, -172)

[node name="Red_monster" parent="." groups=["Enemies"] instance=ExtResource("7_461yd")]
visible = false
position = Vector2(-1625, -822)
scale = Vector2(0.5, 0.5)
disable_mode = 0

[node name="Axe" parent="." instance=ExtResource("8_oxcd8")]
position = Vector2(33, -180)

[node name="Regen" parent="." instance=ExtResource("9_jw3th")]
position = Vector2(617, 390)
HP_regen = 14

[connection signal="button_down" from="CanvasLayer/Weapon_stock/Weapon_list/Container/Button" to="CanvasLayer/Weapon_stock/Weapon_list/Container/Button" method="_on_button_down"]
[connection signal="weapon_button_pressed" from="CanvasLayer/Weapon_stock/Weapon_list/Container/Button" to="Player" method="weapon_button_pressed"]
[connection signal="add_weapon_to_weapon_stock" from="Player" to="." method="add_weapon_to_weapon_stock"]
[connection signal="health_change" from="Player" to="CanvasLayer/HP_bar" method="player_health_change"]
[connection signal="Player_entered" from="Sword" to="Player" method="Player_entered"]
[connection signal="delete_weapon_from_scene" from="Sword" to="." method="delete_weapon_from_scene"]
[connection signal="dead" from="Red_monster" to="." method="_on_creature_dead"]
[connection signal="hit_player" from="Red_monster" to="Player" method="Take_damage"]
[connection signal="Player_entered" from="Axe" to="Player" method="Player_entered"]
[connection signal="delete_weapon_from_scene" from="Axe" to="." method="delete_weapon_from_scene"]
